zokrates_cli/examples/error/assert.zok
def assert():
	return

def main():
	return